--- a/app.json
+++ b/app.json
@@ -1,6 +1,6 @@
 {
   "expo": {
-    "name": "Calculadora amor",
+    "name": "Affectionate digits",
     "slug": "teste",
     "version": "1.0.0",
     "orientation": "portrait",
